welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:4: error: not found: value avant
	droite(); avant(); droite(); avance(8); gauche(); avance(3); gauche();
                  ^